core/src/test/resources/configurations/invalid/instanceof-invalid-end.instances
instanceof server {
	name: server1;
} instanceof toto {

}